--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
+    "paypal-rest-sdk": "^1.8.1",
     "router": "^1.3.5"
   }
 }
